--- a/index.html
+++ b/index.html
@@ -1,320 +1,123 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Carrito FitZone</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Carrito Deportivo</title>
   <style>
-    :root {
-      --bg: #fff;
-      --fg: #222;
-      --accent: #800000;
-      --card-bg: #f9f9f9;
-      --toast-bg: rgba(0,0,0,0.8);
-    }
-    * { box-sizing: border-box; margin:0; padding:0; }
-    body {
-      font-family: Arial, sans-serif;
-      background: var(--bg);
-      color: var(--fg);
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-    header {
-      background: var(--accent);
-      color: #fff;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-    .container {
-      display: flex;
-      flex: 1;
-      padding: 1rem;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-    .cart, .summary {
-      background: var(--card-bg);
-      border-radius: 8px;
-      padding: 1rem;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-    }
-    .cart { flex: 2; }
-    .summary { flex: 1; max-width: 350px; }
-    h2 { margin-bottom: 1rem; }
-    .cart-item {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      padding: 0.75rem;
-      margin-bottom: 1rem;
-    }
-    .cart-item-header {
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-    }
-    .cart-item img {
-      width: 80px;
-      height: 80px;
-      object-fit: cover;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      cursor: pointer;
-    }
-    .cart-item-details {
-      flex: 1;
-    }
-    .cart-item-details strong {
-      display: block;
-      font-size: 1.1rem;
-    }
-    .cart-item-details small {
-      color: #666;
-    }
-    .cart-item-controls {
-      margin-top: 0.5rem;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 0.5rem;
-    }
-    .qty-group {
-      display: flex;
-      align-items: center;
-      gap: 0.25rem;
-    }
-    .qty-btn {
-      background: var(--accent);
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      width: 24px;
-      height: 24px;
-      cursor: pointer;
-      font-size: 1rem;
-      line-height: 1;
-    }
-    .qty-display {
-      width: 50px;
-      text-align: center;
-      padding: 4px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    .btn-danger {
-      background: var(--accent);
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 0.4rem 0.8rem;
-      cursor: pointer;
-      align-self: stretch;
-      text-align: center;
-    }
-    button, select, input, textarea { font: inherit; }
-    .btn {
-      background: var(--accent);
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 0.6rem 1rem;
-      cursor: pointer;
-      width: 100%;
-      margin-top: 0.5rem;
-    }
+    body { font-family: Arial, sans-serif; background: #f5f5f5; padding: 20px; }
+    .carrito, .cliente-info { background: #fff; border-radius: 10px; padding: 20px; margin-bottom: 20px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    h2 { margin-top: 0; }
+    .producto { display: flex; justify-content: space-between; margin: 10px 0; }
+    .total { font-weight: bold; }
+    .btn { background: #8b0000; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; }
     .btn:hover { background: #a00000; }
-    .modal {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.85);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-    .modal img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 6px;
-    }
-    .toast-container {
-      position: fixed;
-      bottom: 1rem;
-      right: 1rem;
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      z-index: 1001;
-    }
-    .toast {
-      background: var(--toast-bg);
-      color: #fff;
-      padding: 0.75rem 1rem;
-      border-radius: 4px;
-      animation: fadein 0.3s, fadeout 0.3s 2.7s;
-    }
-    @keyframes fadein { from {opacity:0;} to {opacity:1;} }
-    @keyframes fadeout { from {opacity:1;} to {opacity:0;} }
-    .summary label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-    .summary input, .summary select, .summary textarea {
-      width: 100%;
-      margin-top: 0.25rem;
-      padding: 0.5rem;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      background: #fff;
-      color: #222;
-    }
+    .toast { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background: #333; color: #fff; padding: 10px 20px; border-radius: 5px; display: none; }
   </style>
 </head>
 <body>
-  <header>Carrito FitZone</header>
-  <div class="container">
-    <section class="cart">
-      <h2>Tu Carrito</h2>
-      <div id="cart-items"></div>
-    </section>
-    <aside class="summary">
-      <h2>Resumen</h2>
-      <p>Subtotal: <span id="subtotal">$0.00</span></p>
-      <p>Descuento: <span id="discount">$0.00</span></p>
-      <p><strong>Total: <span id="total">$0.00</span></strong></p>
-      <label for="coupon">Código Promocional</label>
-      <input id="coupon" placeholder="Ej: FIT10">
-      <button class="btn" id="apply-coupon">Aplicar</button>
-      <label for="payment">Método de Pago</label>
-      <select id="payment">
-        <optgroup label="Efectivo">
-          <option value="USD">USD</option>
-          <option value="CUP">CUP</option>
-        </optgroup>
-        <optgroup label="Transferencia">
-          <option value="Transferencia CUP">CUP</option>
-          <option value="Transferencia MLC">MLC</option>
-        </optgroup>
-        <optgroup label="Pago en el Exterior">
-          <option value="Zelle">Zelle</option>
-        </optgroup>
-      </select>
-      <label for="cliente-nombre">Nombre del cliente</label>
-      <input id="cliente-nombre" placeholder="Nombre completo">
-      <label for="cliente-telefono">Teléfono</label>
-      <input id="cliente-telefono" placeholder="Número de teléfono">
-      <label for="cliente-direccion">Dirección / Link Google Maps</label>
-      <input id="cliente-direccion" placeholder="Dirección o enlace">
-      <label for="note">¿Quieres aclararnos algo?</label>
-      <textarea id="note" rows="3" placeholder="Escribe tu comentario"></textarea>
-      <button class="btn" id="checkout">Enviar por WhatsApp</button>
-    </aside>
+
+  <div class="carrito">
+    <h2>Carrito de Compras</h2>
+    <div id="cart-items"></div>
+    <div class="total">Subtotal: <span id="subtotal">$ 0.00 USD</span></div>
+    <div class="total">Total: <span id="total">$ 0.00 USD</span></div>
   </div>
 
-  <div class="modal" id="modal"><img src="" alt="Preview"></div>
-  <div class="toast-container" id="toasts"></div>
+  <div class="cliente-info">
+    <h2>Datos del Cliente</h2>
+    <input type="text" id="cliente-nombre" placeholder="Nombre completo" style="width: 100%; margin-bottom: 10px;"><br>
+    <input type="text" id="cliente-telefono" placeholder="Teléfono" style="width: 100%; margin-bottom: 10px;"><br>
+    <textarea id="cliente-direccion" placeholder="Dirección completa" style="width: 100%; margin-bottom: 10px;"></textarea><br>
+    <textarea id="note" placeholder="Notas adicionales" style="width: 100%; margin-bottom: 10px;"></textarea><br>
+    <select id="payment" style="width: 100%; margin-bottom: 10px;">
+      <option>Efectivo</option>
+      <option>Transferencia</option>
+      <option>Pago en el Exterior</option>
+    </select>
+    <button class="btn" id="checkout">Enviar pedido por WhatsApp</button>
+  </div>
+
+  <div class="toast" id="toast"></div>
 
   <script>
-    let cart = JSON.parse(localStorage.getItem('fz-cart')||'[]'), coupon = null;
-    const coupons = { 'FIT10':{type:'percent',amount:10}, 'FIT5':{type:'fixed',amount:5}};
-    function showToast(msg) {
-      const t = document.createElement('div');
-      t.className = 'toast'; t.textContent = msg;
-      document.getElementById('toasts').append(t);
-      setTimeout(() => t.remove(), 3000);
-    }
-    function save() { localStorage.setItem('fz-cart', JSON.stringify(cart)); }
-    function render() {
+    let cart = [
+      { name: "Optimum Nutrition - Creatina Monohidratada 120 servicios", price: 50, qty: 1 },
+      { name: "Force Factor - Creatina Monohidratada 60 Servicios", price: 30, qty: 1 }
+    ];
+
+    const renderCart = () => {
       const container = document.getElementById('cart-items');
       container.innerHTML = '';
-      cart.forEach((item,i) => {
+      let subtotal = 0;
+      cart.forEach(item => {
+        subtotal += item.price * item.qty;
         const div = document.createElement('div');
-        div.className = 'cart-item';
-        div.innerHTML = `
-          <div class="cart-item-header">
-            <img src="${item.image}" data-i="${i}">
-            <div class="cart-item-details">
-              <strong>${item.name}</strong>
-              <small>${item.description}</small>
-            </div>
-            <div><strong>$${item.price.toFixed(2)}</strong></div>
-          </div>
-          <div class="cart-item-controls">
-            <div class="qty-group">
-              <button class="qty-btn" onclick="changeQty(${i},-1)">-</button>
-              <input type="number" class="qty-display" id="qty-${i}" value="${item.qty}" onchange="setQty(${i}, this.value)">
-              <button class="qty-btn" onclick="changeQty(${i},1)">+</button>
-            </div>
-            <button class="btn-danger" onclick="removeItem(${i})">Eliminar</button>
-          </div>`;
-        container.append(div);
+        div.className = 'producto';
+        div.innerHTML = `<span>${item.name} x${item.qty}</span><span>$ ${(item.price * item.qty).toFixed(2)} USD</span>`;
+        container.appendChild(div);
       });
-      bindEvents(); updateSummary();
-    }
-    function changeQty(i,delta){ cart[i].qty = Math.max(1, cart[i].qty+delta); save(); render(); }
-    function setQty(i,val){ cart[i].qty = Math.max(1, parseInt(val)||1); save(); render(); }
-    function removeItem(i){ cart.splice(i,1); save(); render(); showToast('Producto eliminado'); }
-    function bindEvents() {
-      document.querySelectorAll('.cart-item img').forEach(img => {
-        img.onclick = () => {
-          const modal = document.getElementById('modal');
-          modal.querySelector('img').src = img.src;
-          modal.style.display = 'flex';
-        };
-      });
-      document.getElementById('modal').onclick = () => document.getElementById('modal').style.display = 'none';
-    }
-    function updateSummary() {
-      const sub = cart.reduce((s,i)=>s + i.price*i.qty,0);
-      let disc = 0;
-      if(coupon){
-        disc = coupon.type==='fixed' ? coupon.amount : sub*(coupon.amount/100);
-        if(disc>sub) disc=sub;
-      }
-      document.getElementById('subtotal').textContent = `$${sub.toFixed(2)}`;
-      document.getElementById('discount').textContent = `-$${disc.toFixed(2)}`;
-      document.getElementById('total').textContent = `$${(sub-disc).toFixed(2)}`;
-      save();
-    }
-    document.getElementById('apply-coupon').onclick = () => {
-      const code = document.getElementById('coupon').value.trim().toUpperCase();
-      coupon = coupons[code]||null;
-      showToast(coupon ? 'Cupón aplicado' : 'Cupón inválido');
-      updateSummary();
+      document.getElementById('subtotal').textContent = `$ ${subtotal.toFixed(2)} USD`;
+      document.getElementById('total').textContent = `$ ${subtotal.toFixed(2)} USD`;
     };
+
+    const showToast = (msg) => {
+      const toast = document.getElementById('toast');
+      toast.textContent = msg;
+      toast.style.display = 'block';
+      setTimeout(() => toast.style.display = 'none', 3000);
+    };
+
     document.getElementById('checkout').onclick = () => {
       if(!cart.length) return showToast('Carrito vacío');
+
       const method = document.getElementById('payment').value;
-      const name = document.getElementById('cliente-nombre').value;
-      const phone = document.getElementById('cliente-telefono').value;
-      const addr = document.getElementById('cliente-direccion').value;
-      const note = encodeURIComponent(document.getElementById('note').value);
-      const items = cart.map(i=>`${i.name} x${i.qty}`).join('%0A');
-      const total= document.getElementById('total').textContent;
-      const msg = `*Pedido FitZone*%0A${items}%0A%0ASubtotal: ${total}%0APago: ${method}%0ANombre: ${name}%0ATeléfono: ${phone}%0ADirección: ${addr}%0A${note}`;
+      const name = document.getElementById('cliente-nombre').value.trim();
+      const phone = document.getElementById('cliente-telefono').value.trim();
+      const addr = document.getElementById('cliente-direccion').value.trim();
+      const note = document.getElementById('note').value.trim();
+
+      if(!name || !phone || !addr) return showToast('Completa todos los datos del cliente');
+
+      const now = new Date();
+      const fecha = now.toLocaleDateString('es-ES');
+      const hora = now.toLocaleTimeString('es-ES', { hour: '2-digit', minute: '2-digit' });
+      const pedidoID = `${now.getFullYear()}${String(now.getMonth()+1).padStart(2,'0')}${String(now.getDate()).padStart(2,'0')}${String(now.getHours()).padStart(2,'0')}${String(now.getMinutes()).padStart(2,'0')}`;
+
+      const subtotal = document.getElementById('subtotal').textContent;
+      const total = document.getElementById('total').textContent;
+      const costoEnvio = "$ 0.00 USD";
+
+      const items = cart.map(i =>
+        `x${i.qty} ${i.name}   $ ${(i.price * i.qty).toFixed(2)} USD`
+      ).join('%0A');
+
+      let msg = `¡Hola!%0A%0A` +
+                `Número de pedido: ${pedidoID}%0A%0A` +
+                `🗓️ Fecha: ${fecha}%0A` +
+                `🕐 Hora: ${hora}%0A%0A` +
+                `👤 Información del cliente%0A` +
+                `Nombre: ${name}%0A` +
+                `Teléfono: ${phone}%0A%0A` +
+                `🏠 El pedido se llevará a domicilio:%0A%0A` +
+                `📍 Dirección%0A${addr}%0A%0A` +
+                `📝 Pedido%0A%0A${items}%0A%0A` +
+                `💲 Costos%0A%0A` +
+                `Total parcial: ${subtotal} USD%0A` +
+                `Costo de envío: ${costoEnvio}%0A` +
+                `Método de Pago: ${method}%0A%0A` +
+                `Costo total: ${total} USD%0A%0A`;
+
+      if(note) msg += `✏️ Notas del cliente:%0A${encodeURIComponent(note)}%0A%0A`;
+
+      msg += `👆 Envía este mensaje para crear tu pedido.`;
+
       window.open(`https://wa.me/5353264753?text=${msg}`, '_blank');
       showToast('Abriendo WhatsApp...');
     };
-    // Add from URL
-    (function(){
-      const p = new URLSearchParams(window.location.search);
-      if(p.has('producto')){
-        cart.push({
-          name: p.get('producto'),
-          price: parseFloat(p.get('precio'))||0,
-          image: p.get('imagen')||'',
-          description: p.get('descripcion')||'',
-          qty: 1
-        });
-        save(); render(); showToast('Producto añadido');
-      }
-    })();
-    render();
+
+    renderCart();
   </script>
 </body>
 </html>
