--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 :root{--bg:#fff;--fg:#222;--accent:#8B0000;--card-bg:#f9f9f9;--toast-bg:rgba(0,0,0,0.8)}
 *{box-sizing:border-box;margin:0;padding:0}
 body{font-family:Arial, sans-serif;background:var(--bg);color:var(--fg);display:flex;flex-direction:column;min-height:100vh}
-header{background:var(--accent);color:#fff;padding:1rem;text-align:center;font-size:1.5rem;font-weight:700;position:relative}
+header{background:var(--accent);color:#fff;padding:1rem;text-align:center;font-size:1.5rem;font-weight:700}
 .container{display:flex;flex-wrap:wrap;gap:1rem;padding:1rem}
 .cart,.summary{background:var(--card-bg);border-radius:8px;padding:1rem;box-shadow:0 1px 4px rgba(0,0,0,0.1)}
 .cart{flex:2;min-width:280px}
@@ -20,7 +20,7 @@ h2{margin-bottom:1rem}
 .cart-item-details{flex:1}
 .cart-item-details a{display:block;font-size:1.05rem;color:#000;text-decoration:none}
 .cart-item-details a:hover{text-decoration:underline}
-.cart-item-details small{color:#666;display:block;margin-top:4px}
+.cart-item-details small{color:#666}
 .cart-item-controls{margin-top:0.5rem;display:flex;flex-direction:column;gap:0.5rem;align-items:flex-start}
 .qty-group{display:flex;align-items:center;gap:0.25rem}
 .qty-btn{background:var(--accent);color:#fff;border:none;border-radius:4px;width:24px;height:24px;cursor:pointer;font-size:1rem;line-height:1}
@@ -40,13 +40,14 @@ h2{margin-bottom:1rem}
 </style>
 </head>
 <body>
-<header>
+<header style="position:relative; text-align:center; padding:1rem; background:#8B0000; color:#FFFFFF; font-size:1.5rem; font-weight:700;">
   <!-- Casita negra pegada al lado izquierdo -->
   <a href="https://sites.google.com/view/fitzonecuba/inicio" style="position:absolute; left:1rem; top:50%; transform:translateY(-50%); text-decoration:none;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffffff" viewBox="0 0 24 24">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#FFFFFF" viewBox="0 0 24 24">
       <path d="M12 3l10 9h-3v9h-6v-6h-2v6H5v-9H2z"/>
     </svg>
   </a>
+
   Carrito FitZone
 </header>
 
@@ -98,12 +99,13 @@ h2{margin-bottom:1rem}
 <div class="toast-container" id="toasts"></div>
 
 <script>
-/* --- Carrito FitZone --- */
+/* Carrito FitZone (corregido) - recibe productos por URL y guarda en localStorage */
 const STORAGE_KEY = 'fz-cart';
 let cart = JSON.parse(localStorage.getItem(STORAGE_KEY) || '[]');
 let coupon = null;
 let appliedCode = null;
 
+/* Edita los cupones aquí */
 const coupons = {
   'ZONE10': { type: 'percent', amount: 10 },
   'ZONE5': { type: 'fixed', amount: 5 },
@@ -112,27 +114,29 @@ const coupons = {
 
 function showToast(msg){
   const t = document.createElement('div');
-  t.className='toast'; t.textContent=msg;
+  t.className = 'toast';
+  t.textContent = msg;
   document.getElementById('toasts').appendChild(t);
-  setTimeout(()=>t.remove(),3000);
+  setTimeout(()=>t.remove(), 3000);
 }
 
 function save(){ localStorage.setItem(STORAGE_KEY, JSON.stringify(cart)); }
-function escapeHtml(s){ return (!s && s!==0)?'':String(s).replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
-function escapeAttr(s){ return (!s && s!==0)?'':String(s).replaceAll('"','&quot;').replaceAll("'","&#39;"); }
+
+function escapeHtml(s){ if(!s && s!==0) return ''; return String(s).replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
+function escapeAttr(s){ if(!s && s!==0) return ''; return String(s).replaceAll('"','&quot;').replaceAll("'",'&#39;'); }
 
 function render(){
   const container = document.getElementById('cart-items');
-  container.innerHTML='';
-  cart.forEach((item,i)=>{
+  container.innerHTML = '';
+  cart.forEach((item, i) => {
     const div = document.createElement('div');
-    div.className='cart-item';
-    const titleHtml = item.link?`<a href="${escapeAttr(item.link)}" target="_blank">${escapeHtml(item.name)}</a>`:`<span>${escapeHtml(item.name)}</span>`;
+    div.className = 'cart-item';
+    const titleHtml = item.link ? `<a href="${escapeAttr(item.link)}" target="_blank" rel="noopener noreferrer">${escapeHtml(item.name)}</a>` : `<span>${escapeHtml(item.name)}</span>`;
     const optionsText = [
-      item.option1?`${escapeHtml(item.option1.label)}: ${escapeHtml(item.option1.value)}`:'',
-      item.option2?`${escapeHtml(item.option2.label)}: ${escapeHtml(item.option2.value)}`:''
+      item.option1 ? `${escapeHtml(item.option1.label)}: ${escapeHtml(item.option1.value)}` : '',
+      item.option2 ? `${escapeHtml(item.option2.label)}: ${escapeHtml(item.option2.value)}` : ''
     ].filter(Boolean).join(' • ');
-    div.innerHTML=`
+    div.innerHTML = `
       <div class="cart-item-header">
         <img src="${escapeAttr(item.image)}" data-i="${i}" alt="${escapeAttr(item.name)}">
         <div class="cart-item-details">
@@ -143,113 +147,143 @@ function render(){
       </div>
       <div class="cart-item-controls">
         <div class="qty-group">
-          <button class="qty-btn" onclick="changeQty(${i},-1)">-</button>
-          <input type="number" class="qty-display" id="qty-${i}" value="${item.qty}" onchange="setQty(${i},this.value)">
-          <button class="qty-btn" onclick="changeQty(${i},1)">+</button>
+          <button class="qty-btn" onclick="changeQty(${i}, -1)">-</button>
+          <input type="number" class="qty-display" id="qty-${i}" value="${item.qty}" onchange="setQty(${i}, this.value)">
+          <button class="qty-btn" onclick="changeQty(${i}, 1)">+</button>
         </div>
         <button class="btn-danger" onclick="removeItem(${i})">Eliminar</button>
       </div>
     `;
     container.appendChild(div);
   });
-  bindEvents(); updateSummary();
+  bindEvents();
+  updateSummary();
 }
 
-function changeQty(i,delta){ cart[i].qty=Math.max(1,(parseInt(cart[i].qty)||1)+delta); save(); render(); }
-function setQty(i,val){ cart[i].qty=Math.max(1,parseInt(val)||1); save(); render(); }
-function removeItem(i){ cart.splice(i,1); save(); render(); showToast('Producto eliminado'); }
+function changeQty(i, delta){
+  cart[i].qty = Math.max(1, (parseInt(cart[i].qty) || 1) + delta);
+  save(); render();
+}
+function setQty(i, val){
+  cart[i].qty = Math.max(1, parseInt(val) || 1);
+  save(); render();
+}
+function removeItem(i){
+  cart.splice(i,1);
+  save(); render();
+  showToast('Producto eliminado');
+}
 
 function bindEvents(){
   document.querySelectorAll('.cart-item img').forEach(img=>{
-    img.onclick=()=>{ const modal=document.getElementById('modal'); modal.querySelector('img').src=img.src; modal.style.display='flex'; }
+    img.onclick = () => {
+      const modal = document.getElementById('modal');
+      modal.querySelector('img').src = img.src;
+      modal.style.display = 'flex';
+    };
   });
-  document.getElementById('modal').onclick=()=>document.getElementById('modal').style.display='none';
+  document.getElementById('modal').onclick = ()=> document.getElementById('modal').style.display = 'none';
 }
 
 function updateSummary(){
-  const sub = cart.reduce((s,i)=>s + (Number(i.price)||0)*(i.qty||1),0);
-  let disc=0;
-  if(coupon){ disc=coupon.type==='fixed'?coupon.amount:sub*(coupon.amount/100); if(disc>sub) disc=sub; }
-  document.getElementById('subtotal').textContent=`$${sub.toFixed(2)}`;
-  document.getElementById('discount').textContent=`-$${disc.toFixed(2)}`;
-  document.getElementById('total').textContent=`$${(sub-disc).toFixed(2)}`;
-  document.getElementById('coupon-info').textContent=appliedCode?`Código aplicado: ${appliedCode}`:'';
+  const sub = cart.reduce((s,i)=>s + (Number(i.price) || 0) * (i.qty || 1), 0);
+  let disc = 0;
+  if(coupon){
+    disc = coupon.type === 'fixed' ? coupon.amount : sub * (coupon.amount / 100);
+    if(disc > sub) disc = sub;
+  }
+  document.getElementById('subtotal').textContent = `$${sub.toFixed(2)}`;
+  document.getElementById('discount').textContent = `-$${disc.toFixed(2)}`;
+  document.getElementById('total').textContent = `$${(sub - disc).toFixed(2)}`;
+  document.getElementById('coupon-info').textContent = appliedCode ? `Código aplicado: ${appliedCode}` : '';
   save();
 }
 
-document.getElementById('apply-coupon').onclick=()=>{
-  const code=document.getElementById('coupon').value.trim().toUpperCase();
-  coupon=coupons[code]||null; appliedCode=coupon?code:null;
-  showToast(coupon?'Cupón aplicado':'Cupón inválido'); updateSummary();
+/* aplicar cupón */
+document.getElementById('apply-coupon').onclick = () => {
+  const code = document.getElementById('coupon').value.trim().toUpperCase();
+  coupon = coupons[code] || null;
+  appliedCode = coupon ? code : null;
+  showToast(coupon ? 'Cupón aplicado' : 'Cupón inválido');
+  updateSummary();
 };
 
-/* --- Checkout WhatsApp --- */
-document.getElementById('checkout').onclick=()=>{
+/* checkout -> WhatsApp */
+document.getElementById('checkout').onclick = () => {
   if(!cart.length) return showToast('Carrito vacío');
-  const subValue=cart.reduce((s,i)=>s+(Number(i.price)||0)*(i.qty||1),0);
-  const discValue=coupon?(coupon.type==='fixed'?coupon.amount:subValue*(coupon.amount/100)):0;
-  const totalValue=subValue-discValue;
+  const subValue = cart.reduce((s,i)=>s + (Number(i.price)||0) * (i.qty||1), 0);
+  const discValue = coupon ? (coupon.type === 'fixed' ? coupon.amount : subValue * (coupon.amount / 100)) : 0;
+  const totalValue = subValue - discValue;
 
-  const paymentValue=document.getElementById('payment').value;
-  let paymentCategory='';
-  if(['USD','CUP'].includes(paymentValue)) paymentCategory='Efectivo';
-  else if(['Transferencia CUP'].includes(paymentValue)) paymentCategory='Transferencia';
-  else paymentCategory='Pago en el Exterior';
+  const paymentValue = document.getElementById('payment').value;
+  let paymentCategory = '';
+  if(['USD','CUP'].includes(paymentValue)) paymentCategory = 'Efectivo';
+  else if(['Transferencia CUP'].includes(paymentValue)) paymentCategory = 'Transferencia';
+  else paymentCategory = 'Pago en el Exterior';
 
-  const methodText=`${paymentCategory} - ${paymentValue}`;
-  const clientName=document.getElementById('cliente-nombre').value||'';
-  const phone=document.getElementById('cliente-telefono').value||'';
-  const addr=encodeURIComponent(document.getElementById('cliente-direccion').value||'');
-  const note=encodeURIComponent(document.getElementById('note').value||'');
-  const codeUsed=appliedCode||'Ninguno';
-  const subText=`$${subValue.toFixed(2)}`;
-  const discText=`-$${discValue.toFixed(2)}`;
-  const totalText=`$${totalValue.toFixed(2)}`;
+  const methodText = `${paymentCategory} - ${paymentValue}`;
+  const clientName = document.getElementById('cliente-nombre').value || '';
+  const phone = document.getElementById('cliente-telefono').value || '';
+  const addr = encodeURIComponent(document.getElementById('cliente-direccion').value || '');
+  const note = encodeURIComponent(document.getElementById('note').value || '');
+  const codeUsed = appliedCode || 'Ninguno';
+  const subText = `$${subValue.toFixed(2)}`;
+  const discText = `-$${discValue.toFixed(2)}`;
+  const totalText = `$${totalValue.toFixed(2)}`;
 
-  const items=cart.map(i=>{
-    let extra='';
-    if(i.option1) extra+=`${i.option1.label}: ${i.option1.value}`;
-    if(i.option2) extra+= extra?` / ${i.option2.label}: ${i.option2.value}`:`${i.option2.label}: ${i.option2.value}`;
-    if(extra) extra=`%0A ↳ ${extra}`;
-    return `• ${i.name} x${i.qty}${extra}`;
-  }).join('%0A');
+  const items = cart.map(i => `• ${i.name} x${i.qty}`).join('%0A');
 
-  const msg=`*🛒 Pedido FitZone*%0A%0A${items}%0A%0A🧾 *Subtotal:* ${subText}%0A🏷 *Descuento:* ${discText}%0A💰 *Total:* ${totalText}%0A🎟 *Código promocional:* ${codeUsed}%0A💳 *Pago:* ${methodText}%0A%0A👤 *Nombre:* ${encodeURIComponent(clientName)}%0A📞 *Teléfono:* ${encodeURIComponent(phone)}%0A📍 *Dirección:* ${addr}%0A📝 *Nota:* ${note}`;
+  const msg = `*🛒 Pedido FitZone*%0A%0A${items}%0A%0A🧾 *Subtotal:* ${subText}%0A🏷 *Descuento:* ${discText}%0A💰 *Total:* ${totalText}%0A🎟 *Código promocional:* ${codeUsed}%0A💳 *Pago:* ${methodText}%0A%0A👤 *Nombre:* ${encodeURIComponent(clientName)}%0A📞 *Teléfono:* ${encodeURIComponent(phone)}%0A📍 *Dirección:* ${addr}%0A📝 *Nota:* ${note}`;
 
-  window.open(`https://wa.me/5353264753?text=${msg}`,'_blank');
+  window.open(`https://wa.me/5353264753?text=${msg}`, '_blank');
   showToast('Abriendo WhatsApp...');
 };
 
-/* --- Añadir desde URL --- */
+/* --- Añadir desde URL (método A) --- */
 (function(){
-  try{
-    const p=new URLSearchParams(window.location.search);
+  try {
+    const p = new URLSearchParams(window.location.search);
     if(p.has('producto')){
-      const name=p.get('producto')||'';
-      const image=p.get('imagen')||'';
-      const description=p.get('descripcion')||'';
-      const price=parseFloat(p.get('precio'))||0;
-      const link=p.get('link')||'';
-      const opt1={label:p.get('option1-label'),value:p.get('option1-value')};
-      const opt2={label:p.get('option2-label'),value:p.get('option2-value')};
+      const name = p.get('producto') || '';
+      const image = p.get('imagen') || '';
+      const description = p.get('descripcion') || '';
+      const price = parseFloat(p.get('precio')) || 0;
+      const link = p.get('link') || '';
 
-      const existing=cart.find(i=>i.name===name && (i.description||'')===description && (i.image||'')===image && (i.link||'')===link);
+      // si ya existe mismo name+description+image+link => aumentar qty
+      const existing = cart.find(i =>
+        i.name === name &&
+        (i.description || '') === description &&
+        (i.image || '') === image &&
+        (i.link || '') === link
+      );
       if(existing){
-        existing.qty=(existing.qty||1)+1;
-        existing.price=price;
+        existing.qty = (existing.qty || 1) + 1;
+        existing.price = price;
       } else {
         cart.push({
-          name:name, price:price, image:image, description:description, qty:1, link:link,
-          option1: opt1.label?opt1:null,
-          option2: opt2.label?opt2:null
+          name: name,
+          price: price,
+          image: image,
+          description: description,
+          qty: 1,
+          link: link,
+          option1: null,
+          option2: null
         });
       }
-      save(); render(); showToast('Producto añadido');
+      save();
+      render();
+      showToast('Producto añadido');
+      // limpiar parámetros para evitar re-add si refrescan
       if(window.history && window.history.replaceState){
-        window.history.replaceState({},document.title,window.location.origin+window.location.pathname);
+        const cleanUrl = window.location.origin + window.location.pathname;
+        window.history.replaceState({}, document.title, cleanUrl);
       }
     }
-  }catch(e){console.error('Error procesando parámetros de URL',e);}
+  } catch(e){
+    console.error('Error procesando parámetros de URL', e);
+  }
 })();
 
 render();
